[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
btclib = { version = "0.1.0", path = "../lib" }
clap = { version = "4.5.32", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
cursive = "0.21.1"
futures = "0.3.31"
kanal = "0.1.0-pre8"
serde = { version = "1.0.219", features = ["derive"] }
text-to-ascii-art = "=0.1.9"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
